--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
 
     <string name="menu_home">Dashboard</string>
     <string name="menu_pin">Change Pin</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_slideshow">About</string>
 </resources>
