--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="menu_logout">Logout</string>
     <string name="channel_name">Fire Alarm Alerts</string>
     <string name="channel_description">Notifications for fire and unknown zone statuses.</string>
+    <string name="error_no_internet">No internet connection. Please check your network.</string>
+    <string name="error_firebase_data">Error retrieving data from server. Please try again later.</string>
+    <string name="no_internet_connection_banner">No Internet Connection - System Offline</string>
 </resources>
